<resources>
    <string name="app_name">TravelMantics</string>
    <string name="product_name">name</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="add_product">Add</string>
    <string name="product_Activity_title">New Product</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Shoppa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
