<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".ProductActivity"
    android:background="@color/colorGray">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/category_spinner"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/product_image"
                android:src="@drawable/placeholder"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_margin="16dp"
                    android:id="@+id/product_name_edit"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:hint="@string/product_name"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_margin="16dp"
                    android:id="@+id/product_price_edit"
                    android:layout_width="match_parent"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_margin="16dp"
                    android:id="@+id/product_description_edit"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:hint="@string/product_description"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/add_product"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center"
                android:text="@string/add_product"
                android:textColor="@color/colorWhite" />
            <Button
                android:id="@+id/viewAvailableHotels"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center"
                android:text="View Hotels"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/update_product"
                    android:layout_width="0dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_gravity="center"
                    android:text="@string/update"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>